tutorial/hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - a.a.mosorio.dev
      secretName:  hello-kubernetes-tls
  rules:
  - host: a.a.mosorio.dev
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
