tutorial/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - auth.a.mosorio.dev
      secretName:  keycloak-tls
  rules:
  - host: auth.a.mosorio.dev
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
